--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -2,7 +2,8 @@
 <ion-content id="carded">
   <ion-row class="header-row">
   <ion-col size=6>
-    <ion-title>{{'Manage devices' | translate}}</ion-title>
+    <ion-title *ngIf="!selectedRoom">{{'Manage devices' | translate}}</ion-title>
+    <ion-title *ngIf="selectedRoom">{{'Manage devices in selected room:' | translate}}  {{selectedRoom.name}}</ion-title>
   </ion-col>
   </ion-row>
   <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
@@ -26,8 +27,11 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new device' | translate }}">
+          <ion-button *ngIf="selectedRoom" size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new device in the selected room.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
+          </ion-button>
+          <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'Create a new printer.' | translate }}" >
+            <ion-icon slot="icon-only" color="success" name="print"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'Apply actions on the selected objects' | translate }}" >
             <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
