--- a/src/app/protected/cranix/groups/details/members/group-members.page.html
+++ b/src/app/protected/cranix/groups/details/members/group-members.page.html
@@ -18,8 +18,8 @@
       <ion-grid>
         <ion-row>
           <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
+            <ion-title matTooltip="{{'Select the users to remove from the group.'|translate}}">{{ 'Members of the group:' | translate }}</ion-title>
             <ion-item>
-              <ion-label position="stacked">{{ 'Members of the group:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
@@ -29,8 +29,8 @@
             </ag-grid-angular>
           </ion-col>
           <ion-col size=12 sizeMd=12 sizeLg=6 sizeXl=6>
+            <ion-title matTooltip="{{'Select the users to add to the group.'|translate}}">{{ 'Available members:' | translate }}</ion-title>
             <ion-item>
-              <ion-label position="stacked">{{ 'Available members:' | translate }}</ion-label>
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onNoMemberFilterChanged()"
                 id="nonMemberFilter">
               </ion-input>
