--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -1,5 +1,5 @@
-<cranix-toolbar></cranix-toolbar>
-<ion-row class="header-row"></ion-row>
+<!--cranix-toolbar></cranix-toolbar>
+<ion-row class="header-row"></ion-row-->
 <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="all">
