--- a/src/app/shared/actions/actions.component.scss
+++ b/src/app/shared/actions/actions.component.scss
@@ -3,3 +3,9 @@ ion-list {
         margin-bottom: 0;
     }
 }
+ion-list-header {
+    font-size: 16px;
+}
+/* ion-item {
+    font-size: 14px;
+} */
