--- a/src/app/shared/actions/actions.component.html
+++ b/src/app/shared/actions/actions.component.html
@@ -1,9 +1,13 @@
-<ion-item>
-  <ion-label> #  {{'Selected Items: ' | translate }} {{ count }}</ion-label>
-</ion-item>
-<ion-list *ngFor="let item of menu">
-    <ion-item (click)="messages(item.action)">
-      <ion-icon name="{{ item.icon }}"></ion-icon>
-      <ion-label>{{ item.name | translate }}</ion-label>
-    </ion-item>
-</ion-list>
+<ion-content>
+  <ion-list-header> # {{'Selected Items: ' | translate }} {{ count }}</ion-list-header>
+  <ion-list>
+    <div *ngFor="let item of menu">
+      <ion-item *ngIf="item.enabled" (click)="messages(item.action)">
+        <ion-avatar>
+          <ion-icon size="large" name="{{ item.icon }}"></ion-icon>
+        </ion-avatar>
+        <ion-label>{{ item.action | translate }}</ion-label>
+      </ion-item>
+    </div>
+  </ion-list>
+</ion-content>
