--- a/src/app/protected/cranix/devices/devices.page.html
+++ b/src/app/protected/cranix/devices/devices.page.html
@@ -12,7 +12,7 @@
     </ion-fab-button>
     <ion-fab-list side="start">
       <ion-fab-button><ion-icon name="ellipsis-vertical-sharp" (click)="openActions($event,null)"></ion-icon></ion-fab-button>
-      <ion-fab-button><ion-icon name="add-circle-outline" (click)="redirectToEdit($event,null)"></ion-icon></ion-fab-button>
+      <ion-fab-button><ion-icon name="add-circle-outline" (click)="addDevice($event)"></ion-icon></ion-fab-button>
       <ion-fab-button><ion-icon name="apps" (click)="openCollums($event)"></ion-icon></ion-fab-button>
     </ion-fab-list>
   </ion-fab>
@@ -27,11 +27,11 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button *ngIf="selectedRoom" size="small" (click)="redirectToEdit($event,null)"  matTooltip="{{'Create a new device in the selected room.' | translate }}">
+          <ion-button size="small" (click)="addDevice($event)"  matTooltip="{{'Create a new device.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
-          <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'Create a new printer.' | translate }}" >
-            <ion-icon slot="icon-only" color="success" name="print"></ion-icon>
+          <ion-button size="small" (click)="addPrinter($event)" matTooltip="{{'Create a new printer.' | translate }}" >
+            <ion-icon slot="icon-only" name="print"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="openActions($event,null)" matTooltip="{{'Apply actions on the selected objects' | translate }}" >
             <ion-icon slot="icon-only" name="ellipsis-vertical-sharp"></ion-icon>
