--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -43,7 +43,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="softwaresFilterChanged()"
                 id="softwaresFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" id="softwaresTable"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}" id="softwaresTable"
               [rowData]="softwares" [columnDefs]="softwareColumnDefs" rowSelection="multiple" [context]="context"
               (gridReady)="softwaresReady($event)" (selectionChanged)="softwaresChanged()"></ag-grid-angular>
           </ion-col>
@@ -52,7 +52,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="hwconfsFilterChanged()"
                 id="hwconfsFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" id="hwconfsTable"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}" id="hwconfsTable"
               [rowData]="hwconfs" [columnDefs]="hwconfColumnDefs" rowSelection="multiple" [context]="context"
               (gridReady)="hwconfsReady($event)" (selectionChanged)="hwconfsChanged()"></ag-grid-angular>
           </ion-col>
@@ -61,7 +61,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="roomsFilterChanged()"
                 id="roomsFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" id="roomsTable"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}" id="roomsTable"
               [rowData]="rooms" [columnDefs]="roomColumnDefs" rowSelection="multiple" [context]="context"
               (gridReady)="roomsReady($event)" (selectionChanged)="roomsChanged()"></ag-grid-angular>
           </ion-col>
@@ -70,7 +70,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="devicesFilterChanged()"
                 id="devicesFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}" id="devicesTable"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}" id="devicesTable"
               [rowData]="devices" [columnDefs]="deviceColumnDefs" rowSelection="multiple" [context]="context"
               (gridReady)="devicesReady($event)" (selectionChanged)="devicesChanged()"></ag-grid-angular>
           </ion-col>
@@ -81,7 +81,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableSoftwaresFilterChanged()"
                 id="availableSoftwaresFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
               id="availableSoftwaresTable" [rowData]="availableSoftwares" [columnDefs]="softwareColumnDefs"
               rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
               (gridReady)="availableSoftwaresReady($event)" (selectionChanged)="availableSoftwaresChanged()">
@@ -92,7 +92,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableHwconfsFilterChanged()"
                 id="availableHwconfsFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
               id="availableHwconfsTable" [rowData]="availableHwconfs" [columnDefs]="hwconfColumnDefs"
               rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
               (gridReady)="availableHwconfsReady($event)" (selectionChanged)="availableHwconfsChanged()">
@@ -103,7 +103,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableRoomsFilterChanged()"
                 id="availableRoomsFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
               id="availableRoomsTable" [rowData]="availableRooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
               rowMultiSelectWithClick="true" [context]="context" (gridReady)="availableRoomsReady($event)"
               (selectionChanged)="availableRoomsChanged()"></ag-grid-angular>
@@ -113,7 +113,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="availableDevicesFilterChanged()"
                 id="availableDevicesFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
               id="availableDevicesTable" [rowData]="availableDevices" [columnDefs]="deviceColumnDefs"
               rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
               (gridReady)="availableDevicesReady($event)" (selectionChanged)="availableDevicesChanged()">
