--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -39,7 +39,7 @@
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;"class="{{authService.agGridThema}}" [gridOptions]="gridOptions"
+      <ag-grid-angular style="width: 100%; height: 100%;"class="{{authService.settings.agGridThema}}" [gridOptions]="gridOptions"
         [rowData]="rowData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="rowSelection"
         (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
       </ag-grid-angular>
