--- a/src/app/protected/cranix/softwares/status/software-status.component.html
+++ b/src/app/protected/cranix/softwares/status/software-status.component.html
@@ -21,7 +21,7 @@ showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
       </ion-row>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular #agGrid style="width: 100%; height: 100%;" class="{{authService.agGridThema}}" [gridOptions]="memberOptions"
+      <ag-grid-angular #agGrid style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}" [gridOptions]="memberOptions"
         [rowData]="memberData" [columnDefs]="columnDefs" [context]="context" [rowSelection]="memberSelection"
         (gridReady)="onMemberReady($event)" (selectionChanged)="onMemberSelectionChanged()" id="memberTable"
         [rowGroupPanelShow]="rowGroupPanelShow"
