--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -25,7 +25,7 @@
               <ion-input type="text" placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()"
                 id="memberFilter"></ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
               [rowData]="memberData" [columnDefs]="columnDefs" rowMultiSelectWithClick="true" 
               rowSelection="multiple" (gridReady)="onMemberReady($event)"
               (selectionChanged)="onMemberSelectionChanged()" id="memberTable">
@@ -38,7 +38,7 @@
                 id="nonMemberFilter">
               </ion-input>
             </ion-item>
-            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.agGridThema}}"
+            <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
               [rowData]="noMemberData" [columnDefs]="columnDefs"  rowMultiSelectWithClick="true" 
               rowSelection="multiple" (gridReady)="onNoMemberReady($event)"
               (selectionChanged)="onNoMemberSelectionChanged()" id="noMemberTable">
