--- a/src/app/protected/cranix/devices/add-printer/add-printer.component.html
+++ b/src/app/protected/cranix/devices/add-printer/add-printer.component.html
@@ -4,7 +4,8 @@
       <ion-title>{{  'Add printer' | translate }}</ion-title>
       <ion-buttons slot="end">
         <ion-button type="submit" class="ion-no-margin">
-          <ion-icon slot="icon-only" color="success" name="checkmark-sharp" [disabled]="!addPrinterFrom.valid"></ion-icon>
+          <ion-icon slot="icon-only" color="success" name="checkmark-sharp" [disabled]="!addPrinterFrom.valid">
+          </ion-icon>
         </ion-button>
         <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()">
           <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
@@ -16,52 +17,51 @@
     <ion-list lines="full">
       <ion-item>
         <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.roomId" name="roomId" (ngModelChange)="roomChanged($event)" required [compareWith]="objectService.compareFn">
+        <ion-select type="text" [(ngModel)]="printer.roomId" name="roomId" (ngModelChange)="roomChanged($event)"
+          required [compareWith]="objectService.compareFn">
           <ion-select-option *ngFor="let id of objectService.selects['roomId']" value="{{id}}">{{id | idToName:'room'}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'ip'| translate}}</ion-label>
-        <ion-select type="text"  [(ngModel)]="printer.ip" name="ip" (ngModelChange)="ipChanged($event)" required [disabled]="!room">
+        <ion-select type="text" [(ngModel)]="printer.ip" name="ip" required [disabled]="!room">
           <ion-select-option *ngFor="let ip of  ipAdresses" value="{{ip}}">{{ip}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'name'|translate}}</ion-label>
-        <ion-input type="text" text-right [(ngModel)]="printer.name" name="name" required [disabled]="!room"></ion-input>
+        <ion-input type="text" text-right [(ngModel)]="printer.name" name="name" required [disabled]="!room">
+        </ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">{{'hwconfId'| translate}}</ion-label>
-        <ion-select [(ngModel)]="printer.hwconfId" name="hwconfId" required [compareWith]="objectService.compareFn" [disabled]="!room">
-          <ion-select-option *ngFor="let hw of objectService.selects['hwconfId']" value="{{hw}}">
-            {{hw | idToName:'hwconf'}}
+        <ion-label position="stacked">{{'mac'|translate}}</ion-label>
+        <ion-input type="text" [(ngModel)]="printer.mac" name="mac" required [disabled]="!room"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">{{'manufacturer'| translate}}</ion-label>
+        <ion-select type="text" [(ngModel)]="printer.manufacturer" name="manufacturer" [disabled]="!room"  (ngModelChange)="manufacturerChanged($event)">
+          <ion-select-option *ngFor="let man of  manufacturers" value="{{man}}">{{man}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">{{'model'| translate}}</ion-label>
+        <ion-select type="text" [(ngModel)]="printer.model" name="model"  [disabled]="!room">
+          <ion-select-option *ngFor="let mod of models[printer.manufacturer]" value="{{mod}}">{{mod}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="printer.mac" name="mac" required="true" [disabled]="!room"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">{{'wlanMac'|translate}}</ion-label>
-        <ion-input type="text"  [(ngModel)]="printer.wlanMac" name="wlanMac" [disabled]="!room"></ion-input>
+        <ion-label position="stacked">{{ driverFile | translate }}</ion-label>
+        <input type="file" [(ngModel)]="printer.driverFile"  name="driverFile" (change)="handleFileInput($event.target.files)"  [disabled]="!room">
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'serial'|translate}}</ion-label>
-        <ion-input type="text"  [(ngModel)]="printer.serial" name="serial" [disabled]="!room"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.serial" name="serial" [disabled]="!room"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'inventary'|translate}}</ion-label>
-        <ion-input type="text"  [(ngModel)]="printer.inventary" name="inventary" [disabled]="!room"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">{{'row'|translate}}</ion-label>
-        <ion-input type="text"  [(ngModel)]="printer.row" name="row" [disabled]="!room"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">{{'place'|translate}}</ion-label>
-        <ion-input type="text"  [(ngModel)]="printer.place" name="place" [disabled]="!room"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.inventary" name="inventary" [disabled]="!room"></ion-input>
       </ion-item>
     </ion-list>
   </ion-content>
