--- a/src/app/protected/cranix/users/lists/users-lists.page.html
+++ b/src/app/protected/cranix/users/lists/users-lists.page.html
@@ -1,7 +1,7 @@
 <!--cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row"></ion-row-->
 <ion-tabs>
-    <ion-tab-bar slot="bottom">
+    <ion-tab-bar translucent slot="bottom">
       <ion-tab-button tab="all">
         <ion-icon name="caret-back"></ion-icon>
         <ion-label>{{ 'All users' | translate}}</ion-label>
