--- a/src/app/protected/toolbar/toolbar.component.scss
+++ b/src/app/protected/toolbar/toolbar.component.scss
@@ -1,4 +1,23 @@
 ion-toolbar{
---ion-background-color: var(--ion-color-primary);
---ion-text-color: var(--ion-color-primary-contrast);
+//background-color: var(--ion-color-primary);
+    --ion-text-color: var(--ion-color-primary-contrast);
+    background-color: var(--ion-color-primary);
+    --ion-background-color: var(--ion-color-primary);
+    height: 54px;
+    border-color: var(--ion-color-primary-tint);
+    border-width: 2px;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+}
+.ios ion-toolbar {
+    height: 54px;
+    --ion-text-color: var(--ion-color-primary-contrast);
+  //  background-color: var(--ion-color-primary);
+    --background: var(--ion-color-primary);
+    border-color: var(--ion-color-primary-tint);
+    border-width: 2px;
+    border-left: none;
+    border-right: none;
+    border-top: none;
 }
