--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -75,7 +75,7 @@ $breakpoints-values: map-values($grid-breakpoints);
 
 #carded {
   margin-top  : 5px;
-  --background: #f5f5f5;
+//  --background: #f5f5f5;
 
   .header-row {
     padding-top      : 6px;
@@ -84,11 +84,11 @@ $breakpoints-values: map-values($grid-breakpoints);
     //align-content: flex-start;
   }
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 992px) {
     ion-card {
       //flex-grow: 1;
-      height: 93%;
-
+      height: 90%;
+      border: medium;
        display: grid;
       // grid-template-rows: 12%;
       ion-card-header {
@@ -97,21 +97,16 @@ $breakpoints-values: map-values($grid-breakpoints);
 
       ion-card-content {
         padding-top    : 3px;
-        grid-row       : 2/2;
         height         : 100%;
         grid-column    : 1/1;
         overflow       : hidden;
-        border-style   : none;
-        border-bottom  : none;
-        border-left    : none;
-        border-right   : none;
         // border-width: 1px;
       }
     }
   }
 
 
-  @media only screen and (min-width: 769px) {
+  @media only screen and (min-width: 993px) {
     ion-card {
       //flex-grow: 1;
       height            : 93%;
