--- a/src/app/protected/cranix/devices/add-printer/add-printer.component.html
+++ b/src/app/protected/cranix/devices/add-printer/add-printer.component.html
@@ -3,11 +3,11 @@
     <ion-toolbar>
       <ion-title>{{  'Add printer' | translate }}</ion-title>
       <ion-buttons slot="end">
-        <ion-button type="submit" class="ion-no-margin">
-          <ion-icon slot="icon-only" color="success" name="checkmark-sharp" [disabled]="!addPrinterFrom.valid">
+        <ion-button type="submit" class="ion-no-margin" [disabled]="!addPrinterFrom.form.valid || (!printer.driverFile && !printer.model ) || submitted ">
+          <ion-icon slot="icon-only" color="success" name="checkmark-sharp" >
           </ion-icon>
         </ion-button>
-        <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()">
+        <ion-button fill="clear" size="small" (click)="modalCtrl.dismiss()" [disabled]="submitted">
           <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
         </ion-button>
       </ion-buttons>
@@ -18,50 +18,50 @@
       <ion-item>
         <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
         <ion-select type="text" [(ngModel)]="printer.roomId" name="roomId" (ngModelChange)="roomChanged($event)"
-          required [compareWith]="objectService.compareFn">
+          required [compareWith]="objectService.compareFn" [disabled]="submitted">
           <ion-select-option *ngFor="let id of objectService.selects['roomId']" value="{{id}}">{{id | idToName:'room'}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'ip'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.ip" name="ip" required [disabled]="!room">
+        <ion-select type="text" [(ngModel)]="printer.ip" name="ip" required [disabled]="!room || submitted">
           <ion-select-option *ngFor="let ip of  ipAdresses" value="{{ip}}">{{ip}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'name'|translate}}</ion-label>
-        <ion-input type="text" text-right [(ngModel)]="printer.name" name="name" required [disabled]="!room">
+        <ion-input type="text" text-right [(ngModel)]="printer.name" name="name" required [disabled]="!room || submitted">
         </ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'mac'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="printer.mac" name="mac" required [disabled]="!room"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.mac" name="mac" required [disabled]="!room || submitted"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'manufacturer'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.manufacturer" name="manufacturer" [disabled]="!room"  (ngModelChange)="manufacturerChanged($event)">
+        <ion-select type="text" [(ngModel)]="printer.manufacturer" name="manufacturer" [disabled]="!room  || submitted"  (ngModelChange)="manufacturerChanged($event)">
           <ion-select-option *ngFor="let man of  manufacturers" value="{{man}}">{{man}}</ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'model'| translate}}</ion-label>
-        <ion-select type="text" [(ngModel)]="printer.model" name="model"  [disabled]="!room">
+        <ion-select type="text" [(ngModel)]="printer.model" name="model"  [disabled]="!room || submitted">
           <ion-select-option *ngFor="let mod of models[printer.manufacturer]" value="{{mod}}">{{mod}}
           </ion-select-option>
         </ion-select>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{ driverFile | translate }}</ion-label>
-        <input type="file" [(ngModel)]="printer.driverFile"  name="driverFile" (change)="handleFileInput($event.target.files)"  [disabled]="!room">
+        <input type="file" [(ngModel)]="printer.driverFile"  name="driverFile" (change)="handleFileInput($event.target.files)"  [disabled]="!room || submitted">
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'serial'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="printer.serial" name="serial" [disabled]="!room"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.serial" name="serial" [disabled]="!room || submitted"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">{{'inventary'|translate}}</ion-label>
-        <ion-input type="text" [(ngModel)]="printer.inventary" name="inventary" [disabled]="!room"></ion-input>
+        <ion-input type="text" [(ngModel)]="printer.inventary" name="inventary" [disabled]="!room || submitted"></ion-input>
       </ion-item>
     </ion-list>
   </ion-content>
