looks do matter...

--- a/src/app/protected/cephalix/institutes/lists/institutes.component.scss
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.scss
@@ -1,10 +1,13 @@
-name-cell {
+/*name-cell {
     display: grid;
     grid-template-columns: 80%;
     align-items: center;
     justify-content: flex-start;
     margin-right: 25px;
     width: 100%;
+}
+#uuid{
+    padding-left: 2px;
 }
 /*ion-card {
     //flex-grow: 1;
