--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -33,6 +33,9 @@
             </ion-input>
           </ion-item>
         </ion-col>
+        <button (click)="sizeToFit()">SizeToFit</button>
+        <button (click)="sizeAll(true)">AutoSize skip true</button>
+        <button (click)="sizeAll(false)">AutoSize skip false</button>
         <ion-col offset="6" size="3" class="ion-text-end hidden-xs hidden-sm hidden-md">
           <ion-button size="small" (click)="redirectToEdit($event,null)"
             matTooltip="{{'Create a new institute' | translate }}">
