--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -33,15 +33,72 @@ $breakpoints-values: map-values($grid-breakpoints);
   display          : flex;
   //justify-content: center; /* align horizontal *
   align-items      : center;
+  justify-content  :  space-between;
   text-overflow    : ellipsis;
   border-right     : 0px !important;
   border-left-width: 0px !important;
 }
 
 
+
+.ag-theme-material .ag-checkbox .ag-input-wrapper, .ag-theme-material .ag-radio-button .ag-input-wrapper{
+  font-size: 15px;
+  box-shadow: none;
+}
+.ag-theme-material .ag-header-row:first-child .ag-header-cell {
+  padding-left: 4px;
+}
+
+
+.ag-theme-material .ag-checkbox-input-wrapper.ag-checked::after {
+    color: var(--ion-color-secondary);
+}
+.ag-theme-material .ag-checkbox-input-wrapper.ag-indeterminate::after {
+    color: gray;
+}
+.ag-cell-wrapper{
+  justify-content: space-between;
+}
+.uuid-flex{
+
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+.name-action{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 2px;
+  padding-right: 2px;
+  .name {
+    color: red
+  }
+  .actions{
+    color: blue
+  }
+}
+.ag-header-group-cell-label, .ag-header-cell-label{
+  justify-content: center;
+}
+
+/*.ag-header-group-cell-label, .ag-header-cell-label{
+  justify-content: center;
+}
+/* Do not delete, might be usefull 
+.ag-theme-material .ag-selection-checkbox:not(.ag-hidden)~.ag-cell-value:not(:empty) {
+  margin-left: 12px;
+}
+
+.ag-header-cell-label .ag-header-cell-text {
+  font-size: 12px;
+  margin   : auto;
+}*/
+// set the colors to the ones from the material theme
 /*.ag-theme-material .ag-header-cell {
  //background-color: rgba(189, 195, 199, 0.5);
-}*/
+}
 .ag-theme-material .ag-icon-checkbox-unchecked {
   font-size: 15px;
 }
@@ -54,19 +111,7 @@ $breakpoints-values: map-values($grid-breakpoints);
   font-size: 15px;
 
 }
-
-.ag-theme-material .ag-header-row:first-child .ag-header-cell {
-  padding-left: 4px;
-}
-
-.ag-theme-material .ag-selection-checkbox:not(.ag-hidden)~.ag-cell-value:not(:empty) {
-  margin-left: 12px;
-}
-
-.ag-header-cell-label .ag-header-cell-text {
-  font-size: 12px;
-  margin   : auto;
-}
+*/
 
 /*
  * layout for carded-pages
@@ -89,7 +134,7 @@ $breakpoints-values: map-values($grid-breakpoints);
       //flex-grow: 1;
       height: 90%;
       border: medium;
-       display: grid;
+      // display: grid;
       // grid-template-rows: 12%;
       ion-card-header {
         display : none; 
@@ -110,12 +155,15 @@ $breakpoints-values: map-values($grid-breakpoints);
     ion-card {
       //flex-grow: 1;
       height            : 93%;
-      display           : grid;
-      grid-template-rows: 12%;
+      display: flex;
+      flex-direction: column;
+      //display           : grid;
+      //grid-template-rows: 12%;
 
       ion-card-header {
-        grid-row       : 1/2;
-        height         : 100%;
+        align-items: center;
+      //  grid-row       : 1/2;
+      //  height         : 100%;
         /* border-style: ridge;
         border-top     : none;
         border-left    : none;
