--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -6,10 +6,13 @@
       <ion-title *ngIf="! softwareService.selectedInstallationSet">{{ 'Create installation set' | translate}}
       </ion-title>
       <ion-buttons slot="end">
-        <ion-button *ngIf="toShow == 'overview'" type="submit" class="ion-no-margin" [disabled]="!editSoftwareSet.valid">
+        <ion-button *ngIf="toShow == 'overview'" type="submit" class="ion-no-margin" [disabled]="!editSoftwareSet.form.valid || submitted">
           <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
         </ion-button>
-        <ion-button fill="clear" size="small" (click)="closeWindow()">
+        <ion-button *ngIf="softwareService.selectedInstallationSet" fill="clear" size="small" (click)="delete()" [disabled]="submitted">
+          <ion-icon slot="icon-only" color="danger" name="trash"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" size="small" (click)="closeWindow()" [disabled]="submitted">
           <ion-icon slot="icon-only" color="danger" name="close"></ion-icon>
         </ion-button>
       </ion-buttons>
@@ -18,7 +21,7 @@
   <ion-content fullscreen>
     <ion-card>
       <ion-card-header>
-        <ion-segment (ionChange)="segmentChanged($event)">
+        <ion-segment (ionChange)="segmentChanged($event)" [disabled]="submitted">
           <ion-segment-button value="overview">
             <ion-label>{{'Overwiev' | translate}}</ion-label>
           </ion-segment-button>
@@ -88,7 +91,7 @@
                   (input)="availableSoftwaresFilterChanged()" id="availableSoftwaresFilter"></ion-input>
               </ion-item>
               <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
-                id="availableSoftwaresTable" [rowData]="availableSoftwares" [columnDefs]="softwareColumnDefs"
+                id="availableSoftwaresTable" [rowData]="softwareService.availableSoftwares" [columnDefs]="softwareColumnDefs"
                 rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
                 (gridReady)="availableSoftwaresReady($event)" (selectionChanged)="availableSoftwaresChanged()">
               </ag-grid-angular>
