--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -10,7 +10,7 @@
     <ion-icon name="arrow-forward-circle"></ion-icon>
   </ion-fab-button>
   <ion-fab-list side="start">
-    <ion-fab-button><ion-icon name="add-circle-outline" (click)="addSet()"></ion-icon></ion-fab-button>
+    <ion-fab-button><ion-icon name="add-circle-outline" (click)="addEditSet(null)"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="pencil-outline" (click)="applyState()"></ion-icon></ion-fab-button>
     <ion-fab-button><ion-icon name="refresh-outline" (click)="applyState()"></ion-icon></ion-fab-button>
   </ion-fab-list>
@@ -26,7 +26,7 @@
           </ion-item>
         </ion-col>
         <ion-col offset="6" size="3" class="ion-align-self-center ion-text-end hidden-xs hidden-sm hidden-md">
-          <ion-button size="small" (click)="addSet()"  matTooltip="{{'Create a new installation set.' | translate }}">
+          <ion-button size="small" (click)="addEditSet(null)"  matTooltip="{{'Create a new installation set.' | translate }}">
             <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
           </ion-button>
           <ion-button size="small" (click)="writeConfig()"  matTooltip="{{'Write state files for the devices.' | translate }}">
