--- a/src/app/shared/actions/download-softwares/download-softwares.component.html
+++ b/src/app/shared/actions/download-softwares/download-softwares.component.html
@@ -16,11 +16,12 @@
     <ion-input placeholder="{{'search' | translate }}" (input)="packagFilterChanged()" id="packageFilter">
     </ion-input>
   </ion-item>
-    <ag-grid-angular 
+    <ag-grid-angular
       style="width: 100%; height: 90%;"
       class="ag-theme-material"
       rowSelection="multiple"
-      [rowData]="objectService.packagesAvailable" 
+      rowMultiSelectWithClick="true"
+      [rowData]="objectService.packagesAvailable"
       [columnDefs]="columns"
       (gridReady)="tableReady($event)"
       id="agGridTableDS">
